--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<div>NOT funny anymore</div>
+<html>
+    <head>
+        <title>Top 10 games in my opinion</title>
+        <link rel="icon" href="cont.jpg">
+    </head>
+</html>
