--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
         <title>Top 10 games in my opinion</title>
-        <link rel="icon" href="cont.jpg">
+        <link rel="icon" href="icon.jpg">
     </head>
 </html>
