--- a/index.html
+++ b/index.html
@@ -2,5 +2,10 @@
     <head>
         <title>Top 10 games in my opinion</title>
         <link rel="icon" href="cont.png">
+        <style>
+            body{
+                background: url(bg2.jpeg)
+            }
+        </style>
     </head>
 </html>
