--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <link rel="icon" href="cont.png">
         <style>
             body{
-                background: url(bg2.jpeg)
+                background: url(bg2.jpeg);
+                background-repeat: no-repeat;
+                background-size: cover;
             }
         </style>
     </head>
