--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         </style>
     </head>
     <body>
-        <div>Top 10 games in my opinions</div>
+        <h1>Top 10 games in my opinions</h1>
     </body>
 </html>
