--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <style>
             body{
                 background: url(bg2.jpeg);
+                background-repeat: repeat;
+                background-size: cover;
             }
         </style>
     </head>
