--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
         <style>
             body{
                 background: url(bg2.jpeg);
-                background-repeat: repeat;
-                background-size: cover;
+                background-repeat: no-repeat;
+                background-size: auto;
+            }
+            img{
+                width: 50%;
+            }
+            div{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
             }
         </style>
     </head>
     <body>
-        <h7>Top 10 games in my opinions</h7>
+        <div>
+            <img src="maintxt.png">
+        </div>
+        <body text="white">
+        <h1>Top 10 games in my opinions</h1>
     </body>
 </html>
