--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <img src="maintxt.png">
         </div>
         <body text="white">
-        <h7>We all know that there are a lot of good video games out there but which one are the best WARNING in my opinion</h7>
+        <h7>We all know that there are a lot of good video games out there but which one are the best to just sit and play</h7>
+        <body text="red">
+            <h1>WARNING</h1>
+        <body text="white">
+            <h5>This may not include mobile and console games or games i don't know AND all of games are rated in my opinion</h5>
     </body>
 </html>
