--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="maintxt.png">
         </div>
         <body text="white">
-        <h7>We all know that there are a lot of good video games out there but which one are the best to just sit and play</h7>
+        <div>We all know that there are a lot of good video games out there but which one are the best to just sit and play</div>
         <body text="red">
         <br>
             <h1>WARNING</h1>
