--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <body text="white">
         <div>We all know that there are a lot of good video games out there but which one are the best to just sit and play</div>
-        <body text="red">
+        <font color="#ff0000">
             <br>
                 <h1>WARNING</h1>
         <body text="white">
