--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="maintxt.png">
         </div>
         <body text="white">
-        <div>We all know that there are a lot of good video games out there but which one are the best to just sit and play</div>
+        <div>We all know that there are a lot of good video games out there but which one are the best to just sit and play in your free time?</div>
         <font color="#ff0000">
             <br>
                 <h1>WARNING</h1>
