--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
         </div>
         <body text="white">
         <div>We all know that there are a lot of good video games out there but which one are the best to just sit and play in your free time?</div>
-        <font color="#ff0000">
             <br>
-                <h1>WARNING</h1>
-        <body text="white">
+                <h1 style="color:red">WARNING</h1>
             <h5>This may not include mobile and console games or games i don't know AND all of games are rated in my opinion</h5>
     </body>
 </html>
