--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
         <div>
             <img src="maintxt.png">
         </div>
-        <div style="color:white">We all know that there are a lot of good video games out there but which one are the best to just sit and play in your free time?</div>
+        <div style="color:rgb(255, 255, 255)">We all know that there are a lot of good video games out there but which one are the best to just sit and play in your free time?</div>
             <br>
                 <h1 style="color:red">WARNING</h1>
             <h5>This may not include mobile and console games or games i don't know AND all of games are rated in my opinion</h5>
+            <div>
+                <img src="10.png">
+            </div>
     </body>
 </html>
