--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div style="color:rgb(255, 255, 255)">We all know that there are a lot of good video games out there but which one are the best to just sit and play in your free time?</div>
             <br>
                 <h1 style="color:red">WARNING</h1>
-            <h5>This may not include mobile and console games or games i don't know AND all of games are rated in my opinion</h5>
+            <h5 style="color:white">This may not include mobile and console games or games i don't know AND all of games are rated in my opinion</h5>
             <div>
                 <img src="10.png">
             </div>
