--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
             <div>Counter-Strike 2 (CS2) is a 2023 multiplayer tactical first-person shooter game developed and published by Valve. It is the fifth main installment of the Counter-Strike series. Developed as an updated version of the previous main entry, Counter-Strike: Global Offensive (2012), it was announced on March 22, 2023 and was released on September 27, 2023, replacing Global Offensive on Steam.</div>
             <br>
             <div>I personaly play it with friends or just when i am bored. The game is cool but there are toxic players out there so careful while playing it.</div>
+            <div>
+                <img src="9.png">
+            </div>
     </body>
 </html>
