--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div style="color:rgb(255, 255, 255)">We all know that there are a lot of good video games out there but which one are the best to just sit and play in your free time?</div>
             <br>
                 <h1 style="color:red">WARNING</h1>
-            <h5 style="color:white">This may not include mobile and console games or games i don't know AND all of games are rated in my opinion</h5>
+            <h5 style="color:white">This may not include mobile and console games or games i don't know AND all of games are rated in my opinion.</h5>
             <div>
                 <img src="10.png">
             </div>
@@ -41,5 +41,9 @@
             <div>
                 <img src="dst.jpeg" height="100" width="100">
             </div>
+            <div style="color:white">Don't Starve Together is the sequel to Don't Starve, and features the requested multiplayer mechanics. It was originally scheduled to come out in Summer 2014, though a specific date was not given. However, sign-ups for a limited-access, closed Beta were released. It came out on Mac and Linux after being finalized on Windows.</div>
+            <br>
+            <div style="color:white">I personaly play it with friends or just when i am bored. The game is cool bwith so many unique recipes and bosses. I play it but ussually not more than an hour. ALSO this game isn't free.</div>
+            <div>
     </body>
 </html>
