--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <style>
             body{
                 background: url(bg2.jpeg);
-                background-repeat: no-repeat;
+                background-repeat: repeat;
                 background-size: auto;
             }
             img{
@@ -30,7 +30,7 @@
                 <img src="10.png">
             </div>
             <div>
-                <img src="cs2.jpeg" height="200" width="100">
+                <img src="cs2.jpeg" height="400" width="100">
             </div>
             <div style="color:white">Counter-Strike 2 (CS2) is a 2023 multiplayer tactical first-person shooter game developed and published by Valve. It is the fifth main installment of the Counter-Strike series. Developed as an updated version of the previous main entry, Counter-Strike: Global Offensive (2012), it was announced on March 22, 2023 and was released on September 27, 2023, replacing Global Offensive on Steam.</div>
             <br>
@@ -39,11 +39,14 @@
                 <img src="9.png">
             </div>
             <div>
-                <img src="dst.jpeg" height="500" width="100">
+                <img src="dst.jpeg" height="400" width="100">
             </div>
             <div style="color:white">Don't Starve Together is the sequel to Don't Starve, and features the requested multiplayer mechanics. It was originally scheduled to come out in Summer 2014, though a specific date was not given. However, sign-ups for a limited-access, closed Beta were released. It came out on Mac and Linux after being finalized on Windows.</div>
             <br>
             <div style="color:white">I personaly play it with friends or just when i am bored. The game is cool bwith so many unique recipes and bosses. I play it but ussually not more than an hour. ALSO this game isn't free.</div>
             <div>
+            <div>
+                <img src="8.png">
+            </div>
     </body>
 </html>
