--- a/index.html
+++ b/index.html
@@ -48,5 +48,10 @@
             <div>
                 <img src="8.png">
             </div>
+            <div>
+                <img src="m.jpeg" height="400" width="100">
+            </div>
+            <div style="color:white">Minecraft is a sandbox game developed by Mojang Studios and originally released in 2009. The game was created by Markus "Notch" Persson in the Java programming language. Following several early private testing versions, it was first made public in May 2009 before being fully released in November 2011, with Notch stepping down and Jens "Jeb" Bergensten taking over development. Minecraft has become the best-selling video game in history, with over 300 million copies sold and nearly 140 million monthly active players as of 2023. It has been ported to several platforms.</div>
+            <br>
     </body>
 </html>
