--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
             </div>
             <div style="color:white">Don't Starve Together is the sequel to Don't Starve, and features the requested multiplayer mechanics. It was originally scheduled to come out in Summer 2014, though a specific date was not given. However, sign-ups for a limited-access, closed Beta were released. It came out on Mac and Linux after being finalized on Windows.</div>
             <br>
-            <div style="color:white">I personaly play it with friends or just when i am bored. The game is cool bwith so many unique recipes and bosses. I play it but ussually not more than an hour. ALSO this game isn't free.</div>
-            <div>
+            <div style="color:white">I personaly play it with friends or just when i am bored. The game is cool with so many unique recipes and bosses. I play it but usually not more than an hour. ALSO this game isn't free.</div>
             <div>
                 <img src="8.png">
             </div>
@@ -53,5 +52,5 @@
             </div>
             <div style="color:white">Minecraft is a sandbox game developed by Mojang Studios and originally released in 2009. The game was created by Markus "Notch" Persson in the Java programming language. Following several early private testing versions, it was first made public in May 2009 before being fully released in November 2011, with Notch stepping down and Jens "Jeb" Bergensten taking over development. Minecraft has become the best-selling video game in history, with over 300 million copies sold and nearly 140 million monthly active players as of 2023. It has been ported to several platforms.</div>
             <br>
-    </body>
+            <div style="color:white">I personaly play it with friends or just when i am bored. The game is cool but there are not a lot of bosses and their dev team(MOjang) is lazy to make updates which takes them A YEAR to add 1-5 mobs. But if you ignore that fact, the game is cool.</div>
 </html>
