--- a/index.html
+++ b/index.html
@@ -50,7 +50,31 @@
             <div>
                 <img src="m.jpeg" height="400" width="100">
             </div>
+            <br>
             <div style="color:white">Minecraft is a sandbox game developed by Mojang Studios and originally released in 2009. The game was created by Markus "Notch" Persson in the Java programming language. Following several early private testing versions, it was first made public in May 2009 before being fully released in November 2011, with Notch stepping down and Jens "Jeb" Bergensten taking over development. Minecraft has become the best-selling video game in history, with over 300 million copies sold and nearly 140 million monthly active players as of 2023. It has been ported to several platforms.</div>
             <br>
-            <div style="color:white">I personaly play it with friends or just when i am bored. The game is cool but there are not a lot of bosses and their dev team(MOjang) is lazy to make updates which takes them A YEAR to add 1-5 mobs. But if you ignore that fact, the game is cool.</div>
+            <div style="color:white">I personaly play it with friends or just when i am bored. The game is cool but there are not a lot of bosses and their dev team(Mojang) is lazy to make updates which takes them A YEAR to add 1-5 mobs. But if you ignore that fact, the game is cool.</div>
+            <div>
+                <img src="7.png">
+            </div>
+            <div>
+                <img src="bms.jpeg" height="400" width="100">
+            </div>
+            <br>
+            <div style="color:white">Bloons Monkey City is an early adaptation of the standard mobile game adapted for computers, released on 10th April 2020, for both Windows and Macintosh. Unlike other games of the BTD5 generation, this version of Bloons Monkey City is only playable on computers running newer operating systems. It can be played on macOS Catalina and later, as it is 64-bit.</div>
+            <br>
+            <div style="color:white">I personaly play it when i am bored. The game is cool and all of he difrent monkeys you can unlock make game more of a strategy. But there are a lot of in game purchases. If they would have removed them it would be better. But it's a free to play game so it all makes sense.</div>
+            <div>
+                <img src="6.png">
+            </div>
+            <div>
+                <img src="bms.jpeg" height="400" width="100">
+            </div>
+            <br>
+            <div style="color:white">Bloons Monkey City is an early adaptation of the standard mobile game adapted for computers, released on 10th April 2020, for both Windows and Macintosh. Unlike other games of the BTD5 generation, this version of Bloons Monkey City is only playable on computers running newer operating systems. It can be played on macOS Catalina and later, as it is 64-bit.</div>
+            <br>
+            <div style="color:white">I personaly play it when i am bored. The game is cool and all of he difrent monkeys you can unlock make game more of a strategy. But there are a lot of in game purchases. If they would have removed them it would be better. But it's a free to play game so it all makes sense.</div>
+
+
+
 </html>
