--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
             <br>
             <div style="color:white">Bloons Monkey City is an early adaptation of the standard mobile game adapted for computers, released on 10th April 2020, for both Windows and Macintosh. Unlike other games of the BTD5 generation, this version of Bloons Monkey City is only playable on computers running newer operating systems. It can be played on macOS Catalina and later, as it is 64-bit.</div>
             <br>
-            <div style="color:white">I personaly play it when i am bored. The game is cool and all of he difrent monkeys you can unlock make game more of a strategy. But there are a lot of in game purchases. If they would have removed them it would be better. But it's a free to play game so it all makes sense.</div>
+            <div style="color:white">I personaly play it when i am bored. The game is cool and all of the difrent monkeys you can unlock make game more of a strategy. But there are a lot of in game purchases. If they would have removed them it would be better. But it's a free to play game so it all makes sense.</div>
             <div>
                 <img src="6.png">
             </div>
             <div>
-                <img src="bms.jpeg" height="400" width="100">
+                <img src="hl.jpeg" height="400" width="100">
             </div>
             <br>
-            <div style="color:white">Bloons Monkey City is an early adaptation of the standard mobile game adapted for computers, released on 10th April 2020, for both Windows and Macintosh. Unlike other games of the BTD5 generation, this version of Bloons Monkey City is only playable on computers running newer operating systems. It can be played on macOS Catalina and later, as it is 64-bit.</div>
+            <div style="color:white">Half-Life is a 1998 first-person shooter (FPS) game developed by Valve Corporation and published by Sierra Studios for Windows. It was Valve's debut product and the first game in the Half-Life series. The player assumes the role of Gordon Freeman, a scientist who must escape the Black Mesa Research Facility after it is invaded by aliens following a disastrous scientific experiment. The gameplay consists of combat, exploration and puzzles.</div>
             <br>
-            <div style="color:white">I personaly play it when i am bored. The game is cool and all of he difrent monkeys you can unlock make game more of a strategy. But there are a lot of in game purchases. If they would have removed them it would be better. But it's a free to play game so it all makes sense.</div>
+            <div style="color:white">I personaly play it alone but with their 25th aniversery now i play it also with my friend. The game is cool and epic. Has lore. And also it is FREE FOR A LIMMITED TIME. So get it while you can.</div>
 
 
 
