--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <img src="hl.jpeg" height="400" width="100">
             </div>
             <br>
-            <div style="color:white">Half-Life is a 1998 first-person shooter (FPS) game developed by Valve Corporation and published by Sierra Studios for Windows. It was Valve's debut product and the first game in the Half-Life series. The player assumes the role of Gordon Freeman, a scientist who must escape the Black Mesa Research Facility after it is invaded by aliens following a disastrous scientific experiment. The gameplay consists of combat, exploration and puzzles.</div>
+            <div style="color:white"></div>
             <br>
             <div style="color:white">I personaly play it alone but with their 25th aniversery now i play it also with my friend. The game is cool and epic. Has lore. And also it is FREE FOR A LIMMITED TIME. So get it while you can.</div>
             <div>
@@ -101,30 +101,27 @@
                 <img src="hl.jpeg" height="400" width="100">
             </div>
             <br>
-            <div style="color:white">Half-Life is a 1998 first-person shooter (FPS) game developed by Valve Corporation and published by Sierra Studios for Windows. It was Valve's debut product and the first game in the Half-Life series. The player assumes the role of Gordon Freeman, a scientist who must escape the Black Mesa Research Facility after it is invaded by aliens following a disastrous scientific experiment. The gameplay consists of combat, exploration and puzzles.</div>
+            <div style="color:white">.</div>
             <br>
             <div style="color:white">I personaly play it alone but with their 25th aniversery now i play it also with my friend. The game is cool and epic. Has lore. And also it is FREE FOR A LIMMITED TIME. So get it while you can.</div>
             <div>
                 <img src="2.png">
             </div>
             <div>
-                <img src="hl.jpeg" height="400" width="100">
+                <img src="tf2.jpeg" height="400" width="100">
             </div>
             <br>
-            <div style="color:white">Half-Life is a 1998 first-person shooter (FPS) game developed by Valve Corporation and published by Sierra Studios for Windows. It was Valve's debut product and the first game in the Half-Life series. The player assumes the role of Gordon Freeman, a scientist who must escape the Black Mesa Research Facility after it is invaded by aliens following a disastrous scientific experiment. The gameplay consists of combat, exploration and puzzles.</div>
+            <div style="color:white">Team Fortress 2 is a 2007 multiplayer first-person shooter game developed and published by Valve Corporation. It is the sequel to the 1996 Team Fortress mod for Quake and its 1999 remake, Team Fortress Classic. The game was released in October 2007 as part of The Orange Box for Windows and the Xbox 360, and ported to the PlayStation 3 in December 2007. It was released as a standalone game for Windows in April 2008, and updated to support Mac OS X in June 2010 and Linux in February 2013. It is distributed online through Valve's digital retailer Steam, with Electronic Arts managing retail and console editions.</div>
             <br>
-            <div style="color:white">I personaly play it alone but with their 25th aniversery now i play it also with my friend. The game is cool and epic. Has lore. And also it is FREE FOR A LIMMITED TIME. So get it while you can.</div>
+            <div style="color:white">I play it on my free time. I hardly ever get a chance to play with some of my friends so i usually play casual. Also this game is free, but almost pay2win. I still love it.</div>
             <div>
                 <img src="1.png">
             </div>
             <div>
-                <img src="hl.jpeg" height="400" width="100">
+                <img src="t.jpeg" height="400" width="100">
             </div>
             <br>
             <div style="color:white">Half-Life is a 1998 first-person shooter (FPS) game developed by Valve Corporation and published by Sierra Studios for Windows. It was Valve's debut product and the first game in the Half-Life series. The player assumes the role of Gordon Freeman, a scientist who must escape the Black Mesa Research Facility after it is invaded by aliens following a disastrous scientific experiment. The gameplay consists of combat, exploration and puzzles.</div>
             <br>
             <div style="color:white">I personaly play it alone but with their 25th aniversery now i play it also with my friend. The game is cool and epic. Has lore. And also it is FREE FOR A LIMMITED TIME. So get it while you can.</div>
-
-
-
 </html>
