--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
                 <img src="6.png">
             </div>
             <div>
-                <img src="hl.jpeg" height="400" width="100">
+                <img src="PVZ.jpeg" height="400" width="100">
             </div>
             <br>
-            <div style="color:white"></div>
+            <div style="color:white">Plants vs. Zombies (abbreviated as PvZ) is a tower defense video game developed and originally published by PopCap Games and it is the first installment in the Plants vs. Zombies series. The game involves homeowners who use a variety of different plants to prevent waves of zombies from entering their houses and "eating their brains".</div>
             <br>
-            <div style="color:white">I personaly play it alone but with their 25th aniversery now i play it also with my friend. The game is cool and epic. Has lore. And also it is FREE FOR A LIMMITED TIME. So get it while you can.</div>
+            <div style="color:white">I personaly haven't played it in a very long time. And no I'm only talking about the first one. It is cool and hard with some levels, but i only did the first circle not the second one, yet...</div>
             <div>
                 <img src="5.png">
             </div>
@@ -101,9 +101,9 @@
                 <img src="fnaf.png" height="400" width="100">
             </div>
             <br>
-            <div style="color:white">.</div>
+            <div style="color:white">Five Nights at Freddy's is an indie point-and-click survival horror video game and the first installment of the series developed by Scott Cawthon. It was first released on IndieDB as a demo on July 24, 2014 before the full game was released on August 8, 2014 (although it was ultimately removed at an unknown date), and released on Steam on August 18, 2014. The goal for the player is to survive five nights at Freddy Fazbear's Pizza while avoiding getting caught and stuffed into a mascot costume, thus getting killed by the animatronic characters; this is done by tracking their movements via the restaurant's security cameras. </div>
             <br>
-            <div style="color:white">I personaly play it alone but with their 25th aniversery now i play it also with my friend. The game is cool and epic. Has lore. And also it is FREE FOR A LIMMITED TIME. So get it while you can.</div>
+            <div style="color:white">I love this game. I am bad/good at it, depends one what FNAF like i am good at FNAF 1 but not FNAF 2. It is good for free time, and during some scary events, for example if the lights are out and you have it on your phone, you know what to do.</div>
             <div>
                 <img src="2.png">
             </div>
