--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <img src="t.jpeg" height="400" width="100">
             </div>
             <br>
-            <div style="color:white">Half-Life is a 1998 first-person shooter (FPS) game developed by Valve Corporation and published by Sierra Studios for Windows. It was Valve's debut product and the first game in the Half-Life series. The player assumes the role of Gordon Freeman, a scientist who must escape the Black Mesa Research Facility after it is invaded by aliens following a disastrous scientific experiment. The gameplay consists of combat, exploration and puzzles.</div>
+            <div style="color:white">Terraria is a 2011 action-adventure sandbox game developed by Re-Logic. The game was first released for Windows and has since been ported to other PC and console platforms. The game features exploration, crafting, building, painting, and combat with a variety of creatures in a procedurally generated 2D world. Terraria received generally positive reviews and sold over 44 million copies by 2022, making it one of the best-selling video games.</div>
             <br>
-            <div style="color:white">I personaly play it alone but with their 25th aniversery now i play it also with my friend. The game is cool and epic. Has lore. And also it is FREE FOR A LIMMITED TIME. So get it while you can.</div>
+            <div style="color:white">I love this game. I think 330 hours speek for them self. I also sometimes play with my friend/friends. But i sometimes play tModLoader (Terraria but with mods). Terraria isn't free, but if you're looking for a game to waste a bit of money = you just found it.</div>
 </html>
