--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 <div id="id01" class="modal">
   
-  <form class="modal-content animate" action="tf2.html" method="post">
+  <form class="modal-content animate" action="about.html" method="post">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
       <img src="avatar.jpeg" alt="Avatar" class="avatar">
