--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </head>
     <body>
         <div style="color:white">Congrats, now you can go back to the main page:</div>
-        <a= herf="index.html" style="color:white">Click here to get back to the page</a>
+        <a href="index.html" style="color:white">Click here to get back to the page</a>
     </body>
 </html>
