--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         </style>
     </head>
     <body>
-        <div>Congrats, now you can go back to the main page:</div>
-        <a= herf="index.html"><h2>Click here to get back to the page</h2></a>
+        <div style="color:white">Congrats, now you can go back to the main page:</div>
+        <a href="index.html" style="color:white">Click here to get back to the page</a>
     </body>
 </html>
