--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Top 10 games in my opinion</title>
+        <title>Error 404 page not found</title>
         <link rel="icon" href="cont.png">
         <style>
             body {font-family: Arial, Helvetica, sans-serif;}
