--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               }
             }
             body{
-                background: url(bg2.jpeg);
+                background: url(uni.jpeg);
                 background-repeat: repeat;
                 background-size: auto;
             }
