--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
         </style>
     </head>
     <body>
-        <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+        <!-- <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button> -->
+        
 
 <div id="id01" class="modal">
   
