--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@ window.onclick = function(event) {
         <div>
             <img src="maintxt.png">
         </div>
+        <!--
         <div style="color:rgb(255, 255, 255)">We all know that there are a lot of good video games out there but which one are the best to just sit and play in your free time?</div>
             <br>
                 <h1 style="color:red">WARNING</h1>
@@ -285,5 +286,5 @@ window.onclick = function(event) {
             <br>
             <div style="color:white">Terraria is a 2011 action-adventure sandbox game developed by Re-Logic. The game was first released for Windows and has since been ported to other PC and console platforms. The game features exploration, crafting, building, painting, and combat with a variety of creatures in a procedurally generated 2D world. Terraria received generally positive reviews and sold over 44 million copies by 2022, making it one of the best-selling video games.</div>
             <br>
-            <div style="color:white">I love this game. I think 330 hours speek for them self. I also sometimes play with my friend/friends. But i sometimes play tModLoader (Terraria but with mods). Terraria isn't free, but if you're looking for a game to waste a bit of money = you just found it.</div>
+            <div style="color:white">I love this game. I think 330 hours speek for them self. I also sometimes play with my friend/friends. But i sometimes play tModLoader (Terraria but with mods). Terraria isn't free, but if you're looking for a game to waste a bit of money = you just found it.</div>-->
 </html>
