--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
             height: 100vh;
             margin: 0;
         }
@@ -134,6 +135,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
         }
     </style>
 </head>
@@ -181,6 +183,7 @@
 
     <div>
         <img src="maintxt.png">
+        <p style="color: black;">hi</p>
     </div>
 </body>
 </html>
