--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     <div>
         <img src="maintxt.png">
-        <p style="color: black;">hi</p>
+        <p style="color: black;">The page you are looking for no longer exists or has been removed!</p>
     </div>
 </body>
 </html>
