--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
 
     <div>
         <img src="maintxt.png">
-        <p style="color: black;">The page you are looking for no longer exists or has been removed!</p>
+        <p style="color: black; font-size: 24px;">The page you are looking for no longer exists or has been removed!</p>
+        <button onclick="window.location.href='https://www.google.com'">Back Home</button>
     </div>
 </body>
 </html>
