--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div>
         <img src="maintxt.png">
         <p style="color: black; font-size: 24px;">The page you are looking for no longer exists or has been removed!</p>
-        <button onclick="window.location.href='https://www.google.com'">Back Home</button>
+        <button onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">Back Home</button>
     </div>
 </body>
 </html>
