--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         <img src="maintxt.png">
         <p style="color: black; font-size: 24px;">The page you are looking for no longer exists or has been removed!</p>
         <button onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">Back Home</button>
+        <button onclick="window.location.href='ninja.io'">Remove me </button>
     </div>
 </body>
 </html>
