--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Message Box</title>
-    <link rel="icon" href="cont.png">
+    <title>Message Bubbles</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
             padding: 0;
+            background-color: #f4f4f9;
         }
 
         .container {
             max-width: 500px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #f9f9f9;
+            background-color: #fff;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
@@ -45,6 +45,37 @@
         button:hover {
             background-color: #45a049;
         }
+
+        .bubble {
+            background-color: #e0f7fa;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 20px;
+            max-width: 75%;
+            position: relative;
+            word-wrap: break-word;
+        }
+
+        .bubble:before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 10px;
+            width: 0;
+            height: 0;
+            border: 15px solid transparent;
+            border-top-color: #e0f7fa;
+            border-bottom: 0;
+            border-right: 0;
+            margin-left: -7px;
+            margin-bottom: -15px;
+        }
+
+        .bubble-container {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
     </style>
 </head>
 <body>
@@ -53,13 +84,24 @@
         <textarea id="message" placeholder="Type anything here..."></textarea>
         <br>
         <button onclick="submitMessage()">Submit</button>
-        <p id="output"></p>
+        <div id="bubble-container" class="bubble-container"></div>
     </div>
 
     <script>
         function submitMessage() {
             var message = document.getElementById("message").value;
-            document.getElementById("output").innerText = "You wrote: " + message;
+            if (message.trim() !== "") {
+                // Create a new speech bubble
+                var bubble = document.createElement("div");
+                bubble.className = "bubble";
+                bubble.innerText = message;
+
+                // Add the new bubble to the bubble container
+                document.getElementById("bubble-container").appendChild(bubble);
+
+                // Clear the message box
+                document.getElementById("message").value = "";
+            }
         }
     </script>
 </body>
