--- a/index.html
+++ b/index.html
@@ -71,21 +71,19 @@
             max-width: 75%;
             position: relative;
             word-wrap: break-word;
+            align-self: flex-end;
         }
 
         .bubble:before {
             content: '';
             position: absolute;
             bottom: 0;
-            left: 10px;
-            width: 0;
-            height: 0;
-            border: 15px solid transparent;
-            border-top-color: #e0f7fa;
-            border-bottom: 0;
-            border-right: 0;
-            margin-left: -7px;
-            margin-bottom: -15px;
+            right: -15px;
+            width: 15px;
+            height: 15px;
+            background-color: #e0f7fa;
+            transform: rotate(45deg);
+            clip-path: polygon(100% 0, 100% 100%, 0 100%);
         }
 
         .bubble-container {
