--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
-            display: flex;
-            flex-direction: column;
+            background-image: url('bg.png');
+            background-repeat: repeat; /* Repeat the image */
+            background-size: auto; /* Keep original size of the image */
             height: 100vh;
             overflow: hidden; /* Prevent overflow */
         }
