--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Testing</title>
+    <title>AI Test</title>
     <link rel="icon" href="cont.png">
     <style>
         body {
@@ -11,8 +11,8 @@
             margin: 0;
             padding: 0;
             background-image: url('bg.png');
-            background-repeat: repeat; /* Repeat the image */
-            background-size: auto; /* Keep original size of the image */
+            background-repeat: repeat;
+            background-size: 50px; /* Smaller image size */
             height: 100vh;
             overflow: hidden; /* Prevent overflow */
         }
@@ -20,10 +20,11 @@
         .container {
             flex-grow: 1;
             padding: 20px;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0); /* Transparent background */
             overflow-y: auto;
             display: flex;
             flex-direction: column-reverse; /* New messages appear at the top */
+            position: relative;
         }
 
         .input-area {
@@ -33,9 +34,10 @@
             background-color: #f1f1f1;
             position: fixed; /* Fixed position */
             bottom: 0;
-            width: 100%;
+            width: calc(100% - 20px); /* Ensure padding */
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
             z-index: 1; /* Ensure input area is above other content */
+            margin: 0 10px; /* Space from the sides */
         }
 
         textarea {
@@ -73,6 +75,7 @@
             position: relative;
             word-wrap: break-word;
             align-self: flex-end;
+            background-color: rgba(224, 247, 250, 1); /* Ensure blue bubble has no transparency */
         }
 
         .bubble:before {
@@ -85,6 +88,12 @@
             border-left: 10px solid transparent;
             border-right: 10px solid transparent;
             border-top: 10px solid #e0f7fa; /* Match bubble color */
+            transform: rotate(135deg); /* Rotate triangle */
+        }
+
+        .bubble-container {
+            display: flex;
+            flex-direction: column-reverse;
         }
     </style>
 </head>
